--- a/index.html
+++ b/index.html
@@ -3,41 +3,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>eLocate</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0f0f0f;
-            color: #fefefe;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 0.5em;
-            letter-spacing: 2px;
-        }
-        p {
-            font-size: 1.2em;
-            color: #999;
-        }
-        .logo {
-            font-size: 4em;
-            font-weight: bold;
-            letter-spacing: 0.15em;
-            color: #00ffe0;
-        }
-    </style>
+    <title>eLocate — Crafting digital experiences</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="logo">eLocate</div>
-    <h1>Coming Soon</h1>
-    <p>Your digital portfolio in the making.</p>
+    <header class="site-header">
+        <div class="logo">elocate <span>design</span></div>
+        <nav class="main-nav">
+            <a href="#">Work</a>
+            <a href="#">About</a>
+        </nav>
+    </header>
+    <main class="hero">
+        <h1>Crafting<br>digital<br>experiences</h1>
+        <a href="#" class="cta-button">Get in touch</a>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </main>
 </body>
 </html>
