--- a/index.html
+++ b/index.html
@@ -3,22 +3,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>eLocate — Crafting digital experiences</title>
+    <title>eLocate — Digital Design Studio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="site-header">
-        <div class="logo">elocate <span>design</span></div>
+        <div class="logo">elocate <span>studio</span></div>
         <nav class="main-nav">
-            <a href="#">Work</a>
-            <a href="#">About</a>
+            <a href="#work">Work</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
-    <main class="hero">
-        <h1>Crafting<br>digital<br>experiences</h1>
-        <a href="#" class="cta-button">Get in touch</a>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+    <main>
+        <section class="hero">
+            <h1>Crafting<br>digital<br>experiences</h1>
+            <a href="#contact" class="cta-button">Get in touch</a>
+            <p class="description">
+                We are a remote-first design studio focused on clarity, collaboration, and minimalism. 
+                Together with independent creatives, we build meaningful digital products.
+            </p>
+        </section>
+
+        <section class="work" id="work">
+            <h2>Selected Work</h2>
+            <div class="work-grid">
+                <div class="project">Project A</div>
+                <div class="project">Project B</div>
+                <div class="project">Project C</div>
+            </div>
+        </section>
+
+        <section class="about" id="about">
+            <h2>About Us</h2>
+            <p>
+                eLocate is a collective of designers and thinkers who believe in collaborative creation.
+                We work across timezones to design elegant interfaces, smooth flows, and delightful experiences.
+            </p>
+        </section>
+
+        <section class="contact" id="contact">
+            <h2>Contact</h2>
+            <p>Let's collaborate. Reach out via <a href="mailto:hello@elocate.studio">hello@elocate.studio</a></p>
+        </section>
     </main>
 </body>
 </html>
