--- a/index.html
+++ b/index.html
@@ -3,54 +3,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>eLocate — Digital Design Studio</title>
+    <title>eLocate Studio — Future-Facing Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
 </head>
 <body>
-    <header class="site-header">
-        <div class="logo">elocate <span>studio</span></div>
-        <nav class="main-nav">
-            <a href="#work">Work</a>
+    <header class="site-header glass">
+        <div class="logo">eLocate</div>
+        <nav class="nav-links">
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Crafting<br>digital<br>experiences</h1>
-            <a href="#contact" class="cta-button">Get in touch</a>
-            <p class="description">
-                We are a remote-first design studio focused on clarity, collaboration, and minimalism. 
-                Together with independent creatives, we build meaningful digital products.
-            </p>
+        <section class="hero glass">
+            <h1>Design that<br>feels like the future</h1>
+            <p>We blend liquid glass aesthetics with bold UX strategy to build striking and seamless experiences.</p>
+            <a href="#contact" class="cta-button">Let's Connect</a>
         </section>
 
-        <section class="work" id="work">
-            <h2>Selected Work</h2>
-            <div class="work-grid">
-                <div class="project">Project A</div>
-                <div class="project">Project B</div>
-                <div class="project">Project C</div>
+        <section class="services" id="services">
+            <h2>What We Offer</h2>
+            <div class="service-grid">
+                <div class="service glass">
+                    <h3>Product Design</h3>
+                    <p>End-to-end interface design from research to high-fidelity handoff.</p>
+                </div>
+                <div class="service glass">
+                    <h3>Brand Systems</h3>
+                    <p>Visual identity systems rooted in emotion, function, and scalability.</p>
+                </div>
+                <div class="service glass">
+                    <h3>Creative Direction</h3>
+                    <p>Guiding product and storytelling strategy with a futuristic edge.</p>
+                </div>
             </div>
         </section>
 
-        <section class="about" id="about">
-            <h2>About Us</h2>
+        <section class="portfolio" id="portfolio">
+            <h2>Selected Work</h2>
+            <div class="portfolio-grid">
+                <div class="project glass">Project One</div>
+                <div class="project glass">Project Two</div>
+                <div class="project glass">Project Three</div>
+            </div>
+        </section>
+
+        <section class="about glass" id="about">
+            <h2>Who We Are</h2>
             <p>
-                eLocate is a collective of designers and thinkers who believe in collaborative creation.
-                We work across timezones to design elegant interfaces, smooth flows, and delightful experiences.
+                We’re a fluid collective of designers, creators, and digital futurists based in Europe. 
+                Our remote-native model allows us to shape standout experiences with collaborators worldwide.
             </p>
         </section>
 
         <section class="contact" id="contact">
-            <h2>Contact</h2>
-            <p>Let's collaborate. Reach out via <a href="mailto:hello@elocate.studio">hello@elocate.studio</a></p>
+            <div class="glass contact-card">
+                <h2>Contact</h2>
+                <p>We’d love to hear from you. Drop us a message at:</p>
+                <a href="mailto:elocate.studio@gmail.com">elocate.studio@gmail.com</a>
+            </div>
         </section>
     </main>
 </body>
