--- a/index.html
+++ b/index.html
@@ -43,7 +43,27 @@
             </div>
         </section>
 
-        <section class="portfolio" id="portfolio">
+        
+<section class="portfolio" id="portfolio">
+    <h2>Selected Work</h2>
+    <div class="portfolio-grid">
+        <div class="project glass">
+            <a href="https://dribbble.com/shots/25267671--design" target="_blank">
+                <img src="images/dribbble-preview.jpg" alt="Dribbble Design Preview" class="project-img">
+                <h3>Dribbble Design</h3>
+            </a>
+        </div>
+        <div class="project glass">
+            <h3>Project Two</h3>
+            <p>Coming soon...</p>
+        </div>
+        <div class="project glass">
+            <h3>Project Three</h3>
+            <p>Coming soon...</p>
+        </div>
+    </div>
+</section>
+
             <h2>Selected Work</h2>
             <div class="portfolio-grid">
                 <div class="project glass">Project One</div>
