--- a/index.html
+++ b/index.html
@@ -3,89 +3,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>eLocate Studio — Responsive Cuberto Style</title>
+    <title>eLocate — Minimal Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="site-header glass">
-        <div class="logo">eLocate</div>
-        <nav class="nav-links">
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
+    <header class="site-header">
+        <div class="logo">elocate <span>studio</span></div>
+        <nav class="main-nav">
+            <a href="#work">Work</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <main>
-        <section class="hero glass">
-            <h1>Design that<br>feels like the future</h1>
-            <p>We blend liquid glass aesthetics with bold UX strategy to build striking and seamless experiences.</p>
-            <a href="#contact" class="cta-button">Let's Connect</a>
+        <section class="hero" id="top">
+            <h1>Crafting digital experiences</h1>
+            <p class="subtext">Remote design studio focused on clarity, minimalism & collaboration.</p>
+            <a href="#contact" class="cta-button">Get in touch</a>
         </section>
 
-        <section class="services" id="services">
-            <h2>What We Offer</h2>
-            <div class="service-grid">
-                <div class="service glass">
-                    <h3>Product Design</h3>
-                    <p>End-to-end interface design from research to high-fidelity handoff.</p>
-                </div>
-                <div class="service glass">
-                    <h3>Brand Systems</h3>
-                    <p>Visual identity systems rooted in emotion, function, and scalability.</p>
-                </div>
-                <div class="service glass">
-                    <h3>Creative Direction</h3>
-                    <p>Guiding product and storytelling strategy with a futuristic edge.</p>
-                </div>
-            </div>
-        </section>
-
-        
-<section class="portfolio" id="portfolio">
-    <h2>Selected Work</h2>
-    <div class="portfolio-grid">
-        <div class="project glass">
-            <a href="https://dribbble.com/shots/25267671--design" target="_blank">
-                <img src="images/dribbble-preview.jpg" alt="Dribbble Design Preview" class="project-img">
-                <h3>Dribbble Design</h3>
-            </a>
-        </div>
-        <div class="project glass">
-            <h3>Project Two</h3>
-            <p>Coming soon...</p>
-        </div>
-        <div class="project glass">
-            <h3>Project Three</h3>
-            <p>Coming soon...</p>
-        </div>
-    </div>
-</section>
-
+        <section class="work" id="work">
             <h2>Selected Work</h2>
+            <p class="hint">Upload 1200×800 px JPG/PNG images into <code>images/portfolio/</code>.</p>
             <div class="portfolio-grid">
-                <div class="project glass">Project One</div>
-                <div class="project glass">Project Two</div>
-                <div class="project glass">Project Three</div>
+                <img src="images/portfolio/placeholder1.jpg" alt="Project placeholder">
+                <img src="images/portfolio/placeholder2.jpg" alt="Project placeholder">
+                <img src="images/portfolio/placeholder3.jpg" alt="Project placeholder">
             </div>
         </section>
 
-        <section class="about glass" id="about">
-            <h2>Who We Are</h2>
-            <p>
-                We’re a fluid collective of designers, creators, and digital futurists based in Europe. 
-                Our remote-native model allows us to shape standout experiences with collaborators worldwide.
-            </p>
+        <section class="about" id="about">
+            <h2>About</h2>
+            <p>We unite independent designers to build meaningful products. Minimal by default, scalable by design.</p>
         </section>
 
         <section class="contact" id="contact">
-            <div class="glass contact-card">
-                <h2>Contact</h2>
-                <p>We’d love to hear from you. Drop us a message at:</p>
-                <a href="mailto:elocate.studio@gmail.com">elocate.studio@gmail.com</a>
-            </div>
+            <h2>Contact</h2>
+            <p>Drop us a line at <a href="mailto:elocate.studio@gmail.com">elocate.studio@gmail.com</a></p>
         </section>
     </main>
 </body>
