--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>eLocate — Cuberto‑Inspired</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="styles/base.css" />
+  <link rel="stylesheet" href="styles/layout.css" />
 </head>
 <body>
   <header class="site-header">
@@ -18,14 +19,12 @@
   </header>
 
   <main>
-    <!-- HERO -->
     <section id="hero" class="hero">
-      <h1 class="big-title">Digital design <br> studio shaping <br> bold products.</h1>
+      <h1 class="big-title">Digital design <br /> studio shaping <br /> bold products.</h1>
       <p class="hero-desc">We solve problems through design and technology — delivering clarity and scale for global clients.</p>
       <a href="#contact" class="btn">Start project ↗</a>
     </section>
 
-    <!-- WORK -->
     <section id="work" class="section">
       <h2 class="section-title">Selected work</h2>
 
@@ -36,7 +35,7 @@
           <a href="https://dribbble.com/shots/25267671--design" target="_blank">View ↗</a>
         </div>
         <div class="work-image">
-          <img src="images/portfolio/placeholder1.jpg" alt="Project preview">
+          <img src="images/portfolio/placeholder1.jpg" alt="Project preview" />
         </div>
       </div>
 
@@ -46,23 +45,21 @@
           <p>Information architecture and dense data‑viz in an intuitive, delightful interface.</p>
         </div>
         <div class="work-image">
-          <img src="images/portfolio/placeholder2.jpg" alt="Project preview">
+          <img src="images/portfolio/placeholder2.jpg" alt="Project preview" />
         </div>
       </div>
     </section>
 
-    <!-- ABOUT -->
     <section id="about" class="section">
       <h2 class="section-title">About</h2>
       <p class="about-text">eLocate is a collective of independent designers and strategists. We value curiosity, precision and honesty. Our fully remote workflow allows us to assemble the best minds for each project — anywhere on the planet.</p>
     </section>
 
-    <!-- CONTACT -->
     <section id="contact" class="section contact">
       <h2 class="section-title">Let's talk</h2>
       <form action="https://formspree.io/f/xknkzqay" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your name" required>
-        <input type="email" name="_replyto" placeholder="Email" required>
+        <input type="text" name="name" placeholder="Your name" required />
+        <input type="email" name="_replyto" placeholder="Email" required />
         <textarea name="message" placeholder="Tell us about your idea" required></textarea>
         <button type="submit">Send ↗</button>
       </form>
