--- a/index.html
+++ b/index.html
@@ -1,28 +1,83 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>eLocate — Crafting digital experiences</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>eLocate — Cuberto‑Inspired</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/reset.css" />
+  <link rel="stylesheet" href="./styles/base.css" />
+  <link rel="stylesheet" href="./styles/layout.css" />
 </head>
 <body>
-    <header class="site-header">
-        <div class="logo">elocate <span>studio</span></div>
-        <nav class="main-nav">
-            <a href="#">Work</a>
-            <a href="#">About</a>
-        </nav>
-    </header>
-    <main class="hero">
-        <h1>Crafting<br>digital<br>experiences</h1>
-        <a href="#" class="cta-button">Get in touch</a>
-        <p class="description">
-            We are a remote design studio built around collaboration, minimalism and clarity.<br><br>
-            We unite independent designers and creatives to craft purposeful, human-centered products — together.<br><br>
-            Interested in collaborating? Let’s talk.
-        </p>
-    </main>
+  <header class="site-header">
+    <div class="logo">elocate</div>
+    <nav class="nav">
+      <a href="#work">Work</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="hero" class="hero">
+      <h1 class="big-title">Digital design <br /> studio shaping <br /> bold products.</h1>
+      <p class="hero-desc">We solve problems through design and technology — delivering clarity and scale for global clients.</p>
+      <a href="#contact" class="btn">Start project ↗</a>
+    </section>
+
+    <section id="work" class="section">
+      <h2 class="section-title">Selected work</h2>
+
+      <div class="work-item">
+        <div class="work-text">
+          <h3>Dribbble concept</h3>
+          <p>Landing page exploration focused on oversized typography, vivid gradients, and smooth scroll storytelling.</p>
+          <a href="https://dribbble.com/shots/25267671--design" target="_blank">View ↗</a>
+        </div>
+        <div class="work-image">
+          <img src="./images/portfolio/placeholder1.jpg" alt="Project preview" />
+        </div>
+      </div>
+
+      <div class="work-item">
+        <div class="work-text">
+          <h3>Dashboard overhaul</h3>
+          <p>Information architecture and dense data‑viz in an intuitive, delightful interface.</p>
+        </div>
+        <div class="work-image">
+          <img src="./images/portfolio/placeholder2.jpg" alt="Project preview" />
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="section">
+      <h2 class="section-title">About</h2>
+      <p class="about-text">eLocate is a collective of independent designers and strategists. We value curiosity, precision and honesty. Our fully remote workflow allows us to assemble the best minds for each project — anywhere on the planet.</p>
+      <a href="#contact" class="btn light">Join our team</a>
+    </section>
+
+    <section id="clients" class="section clients">
+      <h2 class="section-title">Trusted by</h2>
+      <div class="clients-logos">
+        <img src="./images/clients/client1.png" alt="Client 1" />
+        <img src="./images/clients/client2.png" alt="Client 2" />
+        <img src="./images/clients/client3.png" alt="Client 3" />
+        <img src="./images/clients/client4.png" alt="Client 4" />
+      </div>
+      <a href="#contact" class="btn">Become a client ↗</a>
+    </section>
+
+    <section id="contact" class="section contact">
+      <h2 class="section-title">Let's talk</h2>
+      <form action="https://formspree.io/f/xknkzqay" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your name" required />
+        <input type="email" name="_replyto" placeholder="Email" required />
+        <textarea name="message" placeholder="Tell us about your idea" required></textarea>
+        <button type="submit">Send ↗</button>
+      </form>
+      <p class="email-fallback">Or email us — <a href="mailto:elocate.studio@gmail.com">elocate.studio@gmail.com</a></p>
+      <a href="mailto:elocate.studio@gmail.com" class="btn light">Write us directly</a>
+    </section>
+  </main>
 </body>
 </html>
